--- a/css/level_editor.css
+++ b/css/level_editor.css
@@ -1,3 +1,6 @@
+/* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\ */
+/* Classes */
+/* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\ */
 .atlas {
 	width: 20px;
     height: 20px;
@@ -7,42 +10,42 @@
 	top: 0;
 	left: 0;
 }
-
+/* ------------------------------------------------------------ */
 .pal_btn {
 	width: 20px;
     height: 20px;
 	top: 0;
 	left: 0;
 }
-
+/* ------------------------------------------------------------ */
 .pal_left {
 	background-image: url( '../img/palette_left.png' );
 }
-
+/* ------------------------------------------------------------ */
 .pal_right {
 	background-image: url( '../img/palette_right.png' );
 }
-
+/* ------------------------------------------------------------ */
 .save-btn {
 	background-image: url( '../img/save.png' );
 }
-
+/* ------------------------------------------------------------ */
 .load-btn {
 	background-image: url( '../img/load.png' );
 }
-
+/* ------------------------------------------------------------ */
 .start-btn {
 	background-image: url( '../img/start.png' );
 }
-
+/* ------------------------------------------------------------ */
 .grid-on-off {
 	background-image: url( '../img/grid_on-off.png' );
 }
-
+/* ------------------------------------------------------------ */
 .palette_full {
 	background-image: url( '../img/background_grid.png' );
 }
-
+/* ------------------------------------------------------------ */
 .canvas_layers {
 	position: absolute;
 	top: 0px;
@@ -50,25 +53,28 @@
 	border:0px solid #d3d3d3;
 	z-index: 0;
 }
-
+/* ------------------------------------------------------------ */
+/* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\ */
+/* IDs */
+/* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\ */
 #layer-list {
 	width: 280px;
 	height: 300px;
 	overflow-y: scroll;
 }
-
+/* ------------------------------------------------------------ */
 #container {
 	position: absolute;
 	top: 20px;
 	left: 0px;
 	overflow: hidden;
 }
-
+/* ------------------------------------------------------------ */
 #palette_texture {
 	background-image: url('../img/tilemaps/0.png');
 	overflow: hidden;
 }
-
+/* ------------------------------------------------------------ */
 #palette_cover {
 	position: relative;
 	top: 0px;
@@ -78,7 +84,7 @@
 	background-color: rgba(255, 0, 0, 0.25);
 	pointer-events: none;
 }
-
+/* ------------------------------------------------------------ */
 #canvas_cover {
 	position: relative;
 	top: 0px;
@@ -88,14 +94,14 @@
 	background-color: rgba(255, 0, 0, 0.25);
 	pointer-events: none;
 }
-
+/* ------------------------------------------------------------ */
 #canvas_container {
 	position: relative;
 	overflow: hidden;
 	background-image: url( '../img/background_grid.png' );
 	background-position: left bottom;
 }
-
+/* ------------------------------------------------------------ */
 #current_tile {
 	position: relative;
 	/*bottom: 0px;
@@ -105,7 +111,7 @@
 	border-width: 1px;
 	background-image: url( '../img/tilemaps/0.png' );
 }
-
+/* ------------------------------------------------------------ */
 #grid_overlay {
 	position: absolute;
 	top: 0px;
@@ -117,7 +123,7 @@
 	z-index: 1;
 	pointer-events: none;
 }
-
+/* ------------------------------------------------------------ */
 #file_tab {
 	position: absolute;
 	top: 517px;
@@ -126,7 +132,7 @@
 	height: 20px;
 	background-image: url('../img/file_tab.png');
 }
-
+/* ------------------------------------------------------------ */
 #palette_tab {
 	position: absolute;
 	top: 517px;
@@ -135,7 +141,7 @@
 	height: 20px;
 	background-image: url('../img/palette_tab.png');
 }
-
+/* ------------------------------------------------------------ */
 #links_tab {
 	position: absolute;
 	top: 517px;
@@ -144,7 +150,7 @@
 	height: 20px;
 	background-image: url('../img/links_tab.png');
 }
-
+/* ------------------------------------------------------------ */
 #objects_tab {
 	position: absolute;
 	top: 517px;
@@ -153,7 +159,7 @@
 	height: 20px;
 	background-image: url('../img/objects_tab.png');
 }
-
+/* ------------------------------------------------------------ */
 #presets_tab {
 	position: absolute;
 	top: 517px;
@@ -163,37 +169,38 @@
 	background-image: url('../img/presets_tab.png');
 }
 
-/* ------------------------------------------------------------------- */
-/* Animations */
+/* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\ */
+/* Animations and related classes */
+/* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\ */
 
 @keyframes ani-palette_show {
     0%   {top: -517px;}
     100% {top: 0px;}
 }
-
+/* ------------------------------------------------------------ */
 @keyframes ani-palette_hidden {
     0%   {top: 0px;}
     100% {top: -517px;}
 }
-
+/* ------------------------------------------------------------ */
 .palette_hidden {
 	position: absolute;
 	animation: ani-palette_hidden 0.2s;
 	animation-fill-mode: forwards;
 	z-index: 2;
 }
-
+/* ------------------------------------------------------------ */
 .palette_show {
 	position: absolute;
 	animation: ani-palette_show 0.2s;
 	animation-fill-mode: forwards;
 	z-index: 2;
 }
-
+/* ------------------------------------------------------------ */
 .menu_moveable {
 	
 }
-
+/* ------------------------------------------------------------ */
 .file_settings {
 	display: block;
 	position: absolute;
@@ -204,7 +211,7 @@
 	background-color: #FFFFFF;
 	z-index: 102;
 }
-
+/* ------------------------------------------------------------ */
 .palette_settings {
 	display: flex;
 	position: absolute;
@@ -215,7 +222,7 @@
 	background-color: #FFFFFF;
 	z-index: 101;
 }
-
+/* ------------------------------------------------------------ */
 .links_settings {
 	display: block;
 	position: absolute;
@@ -226,7 +233,7 @@
 	background-color: #FFFFFF;
 	z-index: 100;
 }
-
+/* ------------------------------------------------------------ */
 .objects_settings {
 	display: block;
 	position: absolute;
@@ -237,7 +244,7 @@
 	background-color: #FFFFFF;
 	z-index: 99;
 }
-
+/* ------------------------------------------------------------ */
 .presets_settings {
 	display: block;
 	position: absolute;
@@ -248,7 +255,7 @@
 	background-color: #FFFFFF;
 	z-index: 98;
 }
-
+/* ------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------- */
 
